# rust-fundamentals-learning

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
tests/: test_main.rs
