[package]
name = "rust-fundamentals-learning"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "Study exercises covering Rust fundamentals: ownership, borrowing, pattern matching, error handling, traits, generics, and concurrency."
license = "MIT"

[dependencies]
